--- a/src/pages/reviews.astro
+++ b/src/pages/reviews.astro
@@ -1,9 +1,11 @@
 ---
 import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/Core.astro";
-import ReviewList from "../components/ReviewList.astro";
+
+import dayjs from 'dayjs'
 
 const reviews = await getCollection("reviews");
+let seenYears: Set<number> = new Set()
 ---
 
 <BaseLayout title="Reviews" description="Years ago, I used to write game reviews as a personal hobby. That website no longer exists but I've archived them to reflect my writing progression over time.">
@@ -11,6 +13,30 @@ const reviews = await getCollection("reviews");
     <header>
       <h1>Reviews</h1>
     </header>
-    <ReviewList reviews={reviews} />
+    <ul>
+      {
+        // TODO: Invent something nicer
+        reviews
+          .sort((a, b) => (a.data.date > b.data.date ? 1 : a < b ? -1 : 0))
+          .reverse()
+          .map((r) => {
+            const currentYear = r.data.date.getFullYear();
+            let header = null;
+            if (!seenYears.has(currentYear)) {
+              header = <h2>{currentYear}</h2>
+              seenYears.add(currentYear)
+            }
+            return (
+              <>
+                {header}
+                <li>
+                  <a href={`/${r.collection}/${r.slug}`}>{r.data.title}</a>
+                  <time>{dayjs(r.data.date).format('MMM DD')}</time>
+                </li>
+              </>
+            );
+          })
+      }
+    </ul>
   </main>
 </BaseLayout>
