--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -18,6 +18,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
   )
 }
 <link rel="preconnect" href="https://cdn.utf9k.net" />
+<link rel="sitemap" href="/sitemap-index.xml" />
 <meta name="generator" content={Astro.generator} />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta
