Add a manga page and process images with Sharp
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,7 +96,9 @@ const isProduction = process.env.NODE_ENV === 'production'
           <div class="post-stream">
             <center>
               <header>
-                <h3>Manga I'm actively churning through</h3>
+                <h3>
+                  <a href="/manga/">Manga I'm actively churning through</a>
+                </h3>
               </header>
               <ul>
                 {
