Use Image component for manga list
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -22,7 +22,9 @@ const typedGames = games as GameList[];
       {
         typedGames.map((gameList) => (
           <div class="grid-list">
-            <h3>{gameList.list}</h3>
+            <header>
+              <h2>{gameList.list}</h2>
+            </header>
             <ul role="list">
               {gameList.games
                 .map((game) => (
