--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,11 @@ const blogPosts = await getCollection("blog", ({ data }) => {
   return data.draft !== true
 });
 
+const processedPosts = blogPosts
+  .sort((a, b) => (a.data.date > b.data.date ? 1 : a < b ? -1 : 0))
+  .reverse()
+  .slice(0, 6)
+
 // MDX RSS hack taken from https://github.com/kogakure/website-astro-stefanimhoff.de/blob/8ecf5b3644dee879a3d344a8de08c5ad0be895cf/src/pages/index.astro#L14
 // who adapted it from https://scottwillsey.com/rss-pt2/
 
@@ -155,11 +160,7 @@ const isProduction = process.env.NODE_ENV === 'production'
             <h3>Recently updated pages</h3>
             <ul>
               {
-                blogPosts
-                  .sort((a, b) => (a.data.date > b.data.date ? 1 : a < b ? -1 : 0))
-                  .reverse()
-                  .slice(0, 6)
-                  .map(p => <li><a href={`/blog/${p.slug}`}>{p.data.title}</a></li>)
+                processedPosts.map(p => <li><a href={`/blog/${p.slug}`}>{p.data.title}</a></li>)
               }
             </ul>
           </div>
