Remove retried list from games + improve readability of lists
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -20,7 +20,8 @@ const typedGames = games as GameList[];
     </header>
     <div id="post-body">
       {
-        typedGames.map((gameList) => (
+        typedGames
+          .map((gameList) => (
           <div class="grid-list">
             <header>
               <h2>{gameList.list}</h2>
@@ -56,6 +57,7 @@ const typedGames = games as GameList[];
                 ))}
             </ul>
           </div>
+          <hr />
         ))
       }
     </div>
