--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,18 +76,21 @@ const isProduction = process.env.NODE_ENV === 'production'
                 {
                   (books as BookList[])[0].books
                     .filter((b) => b.progress !== 100)
-                    .map((book) => (
-                      <li style="display: inline-block;">
-                        <Image
-                          alt={`A cover image of the book titled ${book.title}`}
-                          src={book.cover}
-                          height={book.cover_height!}
-                          width={book.cover_width!}
-                          style="border-radius: 3px; width: auto; max-height: 16rem;"
-                        />
-                        <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={book.link}>OpenLibrary</a></figcaption>
-                        <p>{book.progress}% read</p>
-                      </li>
+                    .map((book, idx) => (
+                      <>
+                        <li style="display: inline-block;">
+                          <Image
+                            alt={`A cover image of the book titled ${book.title}`}
+                            src={book.cover}
+                            height={book.cover_height!}
+                            width={book.cover_width!}
+                            style="border-radius: 3px; width: auto; max-height: 16rem;"
+                          />
+                          <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={book.link}>OpenLibrary</a></figcaption>
+                          <p>{book.progress}% read</p>
+                        </li>
+                        {(idx+1) % 3 === 0 && <br />}
+                      </>
                     ))
                 }
               </ul>
@@ -105,18 +108,21 @@ const isProduction = process.env.NODE_ENV === 'production'
                 {
                   manga
                     .filter((m) => m.chapters !== null)
-                    .map((manga) => (
-                      <li style="display: inline-block;">
-                        <Image
-                          alt={`A cover image of ${manga.title}, a manga series by ${manga.author}`}
-                          src={manga.cover}
-                          width={manga.cover_width}
-                          height={manga.cover_height}
-                          style="border-radius: 3px; width: auto; max-height: 16rem;"
-                        />
-                        <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={manga.url}>Anilist</a></figcaption>
-                        <p>{manga.chapters! - manga.progress} chapters left</p>
-                      </li>
+                    .map((manga, idx) => (
+                      <>
+                        <li style="display: inline-block;">
+                          <Image
+                            alt={`A cover image of ${manga.title}, a manga series by ${manga.author}`}
+                            src={manga.cover}
+                            width={manga.cover_width}
+                            height={manga.cover_height}
+                            style="border-radius: 3px; width: auto; max-height: 16rem;"
+                          />
+                          <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={manga.url}>Anilist</a></figcaption>
+                          <p>{manga.chapters! - manga.progress} chapters left</p>
+                        </li>
+                        {(idx+1) % 3 === 0 && <br />}
+                      </>
                     ))
                 }
               </ul>
@@ -169,17 +175,20 @@ const isProduction = process.env.NODE_ENV === 'production'
               </header>
               <ul>
                 {
-                  (games as GameList[])[0].games.map((game) => (
-                    <li style="display: inline-block;">
-                      <Image
-                        alt={`Box art for the game titled ${game.title}`}
-                        src={game.cover.url}
-                        width={game.cover.width}
-                        height={game.cover.height}
-                        style="border-radius: 3px; width: auto; max-height: 16rem;"
-                      />
-                      <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={game.link}>Backloggd</a></figcaption>
-                    </li>
+                  (games as GameList[])[0].games.map((game, idx) => (
+                    <>
+                      <li style="display: inline-block;">
+                        <Image
+                          alt={`Box art for the game titled ${game.title}`}
+                          src={game.cover.url}
+                          width={game.cover.width}
+                          height={game.cover.height}
+                          style="border-radius: 3px; width: auto; max-height: 16rem;"
+                        />
+                        <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={game.link}>Backloggd</a></figcaption>
+                      </li>
+                      {(idx+1) % 3 === 0 && <br />}
+                    </>
                   ))
                 }
               </ul>
