--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -5,6 +5,8 @@ import type { BookList } from "../schemas/books";
 
 import books from "../data/books.yml";
 
+import { getApexDomain } from '../utils/domains'
+
 import { Image } from 'astro:assets';
 
 const typedBooks = books as BookList[];
@@ -54,6 +56,7 @@ const typedBooks = books as BookList[];
                         width={b.cover_width}
                         height={b.cover_height}
                       />
+                      <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={b.link}>{getApexDomain(b.link)}</a></figcaption>
                       <a href={b.link} target="_blank" rel="noopener noreferer">
                         <span>{b.title}</span>
                       </a>
