Restore figcaptions to other list pages + use apex link for books on homepage
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -37,6 +37,7 @@ const typedGames = games as GameList[];
                         width={game.cover.width}
                         height={game.cover.height}
                       />
+                      <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={game.link}>Backloggd</a></figcaption>
                       <a
                         href={game.link}
                         target="_blank"
