--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,8 @@ import { Image } from 'astro:assets';
 import WriteFile from "../components/WriteFile.astro"
 import RssXml from '../components/RssXml.astro';
 
+import { getApexDomain } from "../utils/domains";
+
 const blogPosts = await getCollection("blog", ({ data }) => {
   return data.draft !== true
 });
@@ -86,7 +88,7 @@ const isProduction = process.env.NODE_ENV === 'production'
                             width={book.cover_width!}
                             style="border-radius: 3px; width: auto; max-height: 16rem;"
                           />
-                          <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={book.link}>OpenLibrary</a></figcaption>
+                          <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={book.link}>{getApexDomain(book.link)}</a></figcaption>
                           <p>{book.progress}% read</p>
                         </li>
                         {(idx+1) % 3 === 0 && <br />}
