--- a/src/pages/manga.astro
+++ b/src/pages/manga.astro
@@ -30,6 +30,7 @@ import { Image } from 'astro:assets';
                   height={m.cover_height}
                   style="border-radius: 3px; width: auto; max-width: 16rem;"
                 />
+                <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={manga.url}>Anilist</a></figcaption>
                 <a href={m.url} target="_blank" rel="noopener noreferer">
                   <span>{m.title}</span>
                 </a>
@@ -56,6 +57,7 @@ import { Image } from 'astro:assets';
                   height={m.cover_height}
                   style="border-radius: 3px; width: auto; max-width: 16rem;"
                 />
+                <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={manga.url}>Anilist</a></figcaption>
                 <a href={m.url} target="_blank" rel="noopener noreferer">
                   <span>{m.title}</span>
                 </a>
