Fix bad ref on manga list
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/pages/manga.astro
+++ b/src/pages/manga.astro
@@ -30,7 +30,7 @@ import { Image } from 'astro:assets';
                   height={m.cover_height}
                   style="border-radius: 3px; width: auto; max-width: 16rem;"
                 />
-                <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={manga.url}>Anilist</a></figcaption>
+                <figcaption style="display: none;">You can learn more by visiting <a target="_blank" href={m.url}>Anilist</a></figcaption>
                 <a href={m.url} target="_blank" rel="noopener noreferer">
                   <span>{m.title}</span>
                 </a>
