--- a/src/pages/books/[...slug].astro
+++ b/src/pages/books/[...slug].astro
@@ -39,7 +39,7 @@ if (subtitle != null) {
 
 <Layout title={fullTitle}>
   <article>
-    <div id="post-body">
+    <div id="post-body" class="book-body">
       <Content />
       <ul>
         <li>Recommended: <input type="checkbox" checked={recommended} /></li>
