--- a/src/pages/books/[...slug].astro
+++ b/src/pages/books/[...slug].astro
@@ -38,8 +38,8 @@ if (subtitle != null) {
 ---
 
 <Layout title={fullTitle}>
-  <article>
-    <div id="post-body" class="book-body">
+  <article class="book-entry">
+    <div id="post-body">
       <Content />
       <ul>
         <li>Recommended: <input type="checkbox" checked={recommended} /></li>
