--- a/src/pages/books/[...slug].astro
+++ b/src/pages/books/[...slug].astro
@@ -51,7 +51,7 @@ if (subtitle != null) {
         <li>Authors: {authors.join(' and ')}</li>
         <li>Publisher: {publisher}</li>
         <li>Published: {dayjs(published).format('MMMM DD, YYYY')}</li>
-        <li>Date Finished: {dayjs(date_finished).format('MMMM DD, YYYY')}</li>
+        {progress === 100 && <li>Date Finished: {dayjs(date_finished).format('MMMM DD, YYYY')}</li>}
         <li>Page Count: {pageCount}</li>
         <li>Info: <a href={link}>{link}</a></li>
         <li>ISBN 10: {isbn10}</li>
