--- a/src/pages/books/[...slug].astro
+++ b/src/pages/books/[...slug].astro
@@ -42,7 +42,7 @@ if (subtitle != null) {
 <Layout title={fullTitle}>
   <article class="book-entry">
     <div id="post-body">
-      <h1>{title}<h1>
+      <h1>{title}</h1>
       <img src={cover} height={cover_height} width={cover_width} />
       <ul>
         <li>Status: {status}</li>
