--- a/src/pages/books/[...slug].astro
+++ b/src/pages/books/[...slug].astro
@@ -55,6 +55,7 @@ if (subtitle != null) {
         <li>Info: <a href={link}>{link}</a></li>
         <li>ISBN: {isbn}</li>
       </ul>
+      <Content />
     </div>
   </article>
 </Layout>
