--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -52,6 +52,7 @@ if (Astro.props.title) {
 <link rel="me" href="https://github.com/marcus-crane" />
 <link rel="webmention" href="https://webmention.io/utf9k.net/webmention" />
 <link rel="pingback" href="https://webmention.io/utf9k.net/xmlrpc" />
+<link rel="alternate" type="application/rss+xml" title="utf9k" href={new URL("rss.xml", Astro.site)} />
 
 <script>
   import "../js/image-viewer";
