--- a/hugo/layouts/partials/head.html
+++ b/hugo/layouts/partials/head.html
@@ -1,7 +1,10 @@
 <title>{{ if ne .Title "" }}{{ .Title }} | {{ end }}utf9k</title>
+<link rel="preconnect" href="https://cdn.utf9k.net" />
+<link rel="sitemap" href="/sitemap.xml" />
 {{ range .AlternativeOutputFormats -}}
 <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}">
 {{ end -}}
+<!-- TODO: sitemap? generator? -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="theme-color" content="#eaebe3" media="(prefers-color-scheme: light)" />
 <meta name="theme-color" content="#1f2738" media="(prefers-color-scheme: dark)" />
