--- a/hugo/layouts/partials/header.html
+++ b/hugo/layouts/partials/header.html
@@ -1,8 +1,10 @@
 <header class="navigation">
-  <a href="/" id="logo">
-    <img src="/favicon.png" alt="utf9k" width="16px" height="16px">
-    <span>utf9k</span>
-  </a>
+  <div id="logo">
+    <a href="/">
+      <img src="/favicon.png" alt="utf9k" width="16px" height="16px">
+      <span>utf9k</span>
+    </a>
+  </div>
   <nav>
     {{ $lastIndex := sub (len .Site.Menus.main) 1 }}
     {{ range $i, $item := .Site.Menus.main }}
