--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,7 +29,7 @@
   --bg-code-dark: #232136;
 }
 
-:root, .littlefoot__content {
+:root, article .littlefoot__content {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
@@ -58,7 +58,7 @@ body {
     color: var(--text-light);
   }
 
-  .littlefoot__content {
+  article .littlefoot__content {
     background: var(--bg-dark);
     color: var(--text-light);
   }
