Make footnote text a little smaller
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -375,6 +375,10 @@ article #post-body .littlefoot__content p {
   margin-bottom: 0;
 }
 
+article #post-body .littlefoot__content p {
+  font-size: 1rem;
+}
+
 article #post-body img {
   border-radius: 3px;
 }
