--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -1,16 +1,17 @@
 ---
-import { getCollection } from 'astro:content';
+import { getCollection, render } from 'astro:content';
 import MarkdownPost from '../../layouts/MarkdownPost.astro';
 
 export async function getStaticPaths() {
-  const reviews = await getCollection('reviews');
-  return reviews.map(entry => ({
-    params: { slug: entry.slug }, props: { entry },
+  const posts = await getCollection('blog');
+  console.log(posts)
+  return posts.map(entry => ({
+    params: { id: entry.id }, props: { entry },
   }));
 }
 
 const { entry } = Astro.props;
-const { Content, remarkPluginFrontmatter } = await entry.render();
+const { Content, remarkPluginFrontmatter } = await render(entry);
 
 const { title, description, date } = entry.data;
 const { minutesRead } = remarkPluginFrontmatter;
