Add Astro version to debug page
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/pages/debug/build-information.astro
+++ b/src/pages/debug/build-information.astro
@@ -30,6 +30,10 @@ const allQuestions = await getCollection("questions")
           <td>{new Date().toISOString()}</td>
         </tr>
         <tr>
+          <td>Astro version</td>
+          <td>{Astro.generator}</td>
+        </tr>
+        <tr>
           <td>Total Blog posts</td>
           <td>{allBlogPosts.length}</td>
         </tr>
