--- a/src/pages/reviews.astro
+++ b/src/pages/reviews.astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/Core.astro";
 
-import dayjs from 'dayjs'
+import * as dayjs from 'dayjs'
 
 const reviews = await getCollection("reviews");
 let seenYears: Set<number> = new Set()
