Revert dayjs changes
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/src/pages/books/[...id].astro
+++ b/src/pages/books/[...id].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection, render } from "astro:content";
 import Layout from "../../layouts/Core.astro";
-import * as dayjs from 'dayjs'
+import dayjs from 'dayjs'
 
 export async function getStaticPaths() {
   const books = await getCollection("books");
