--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/Core.astro";
-import * as dayjs from 'dayjs'
+import dayjs from 'dayjs'
 
 const posts = await getCollection("blog");
 let seenYears: Set<number> = new Set()
