--- a/_lume/css/style.css
+++ b/_lume/css/style.css
@@ -29,7 +29,7 @@
   --bg-code-dark: #232136;
 }
 
-:root, .littlefoot__content {
+:root, article .littlefoot__content {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
 
@@ -58,7 +58,7 @@ body {
     color: var(--text-light);
   }
 
-  .littlefoot__content {
+  article .littlefoot__content {
     background: var(--bg-dark);
     color: var(--text-light);
   }
@@ -270,6 +270,7 @@ pre {
 .post-stream li {
   list-style: none;
   text-align: center;
+  margin-right: .5rem;
 }
 
 /* Player history */
@@ -374,8 +375,26 @@ article #post-body .littlefoot__content p {
   margin-bottom: 0;
 }
 
+article #post-body .littlefoot__content p {
+  font-size: 1rem;
+}
+
 article #post-body img {
   border-radius: 3px;
+}
+
+article.book-entry #post-body blockquote p,
+article.book-entry #post-body h2 {
+  margin-bottom: 0;
+}
+
+article.book-entry #post-body p {
+  margin-top: 0.75em;
+}
+
+article.book-entry #post-body center {
+  margin: 0 auto;
+  max-width: 35%;
 }
 
 article .heading-2 {
@@ -454,7 +473,8 @@ blockquote {
 }
 
 /* Notices */
-.notice {
+.notice,
+div[data-callout] {
   background-color: var(--text-light);
   border-radius: 0.5rem;
   display: flex;
@@ -464,18 +484,22 @@ blockquote {
   padding: 1rem 1.6rem;
 }
 
-.notice span {
-  padding-right: 0.5rem;
-}
-
 article #post-body .notice h2,
 article #post-body .notice h3,
-article #post-body .notice p {
+article #post-body .notice p,
+article #post-body div[data-callout-title],
+article #post-body div[data-callout-body] p {
   margin-bottom: 0.5rem;
 }
 
+article #post-body div[data-callout-title] {
+  font-weight: 800;
+  font-size: 1.1em;
+}
+
 @media (prefers-color-scheme: dark) {
-  .notice {
+  .notice,
+  div[data-callout] {
     background-color: var(--text-dark);
   }
 }
@@ -565,9 +589,10 @@ iframe {
   table,
   .highlight,
   div[data-rehype-pretty-code-fragment],
-  pre[class*="language-"],
+  pre[class*="data-language"],
   figure,
-  #post-body > img {
+  #post-body > img,
+  div[data-callout] {
     width: 110%;
     margin-left: -5%;
   }
@@ -577,7 +602,7 @@ iframe {
   table,
   .highlight,
   div[data-rehype-pretty-code-fragment],
-  pre[class*="language-"],
+  pre[class*="data-language"],
   figure {
     width: 150%;
     margin-left: -25%;
@@ -639,18 +664,20 @@ form#search {
   margin-top: 1rem;
 }
 
+ul li.question span {
+  margin-right: .3rem;
+}
+
 /* Grid lists */
 #post-body .grid-list ul {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: repeat(3, minmax(40px, auto));
   grid-gap: 20px;
 }
 
 @media only screen and (min-width: 1000px) {
   #post-body .grid-list ul:not(.partial-list) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(4, minmax(40px, auto));
     margin-left: -25%;
     width: 150%;
   }
@@ -658,8 +685,6 @@ form#search {
 
 @media only screen and (min-width: 1200px) {
   #post-body .grid-list ul:not(.partial-list):not(.almost-full-list) {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(6, minmax(40px, auto));
     margin-left: -50%;
     width: 200%;
   }
@@ -843,7 +868,7 @@ footer {
     background: var(--border-bg);
     transition-duration: 3s;
     transform: rotate(15deg);
-    animation: rotate 120s linear infinite;
+    animation: rotate 100s linear infinite;
 }
 
 @keyframes rotate {
