--- a/css/style.css
+++ b/css/style.css
@@ -438,19 +438,19 @@ article div[data-rehype-pretty-code-fragment] {
 }
 
 /* Same colours as rose-pine themes loaded via rehype-pretty-code */
-article p code {
+article figure[data-rehype-pretty-code-figure=""] pre {
   background-color: var(--bg-code-light);
   color: var(--text-code-light);
   font-family: PT Mono, Consolas, Monaco, "Andale Mono", "Ubuntu Mono",
     monospace; /* Matches prism config */
   font-size: 1.2em;
-  padding: 0.2rem 0.3rem;
+  padding: 0.4rem 0.6rem;
   border-radius: 0.3rem;
   white-space: nowrap;
 }
 
 @media (prefers-color-scheme: dark) {
-  article p code {
+  article figure[data-rehype-pretty-code-figure=""] pre {
     background-color: var(--bg-code-dark);
     color: var(--text-code-dark);
   }
