--- a/css/redesign.css
+++ b/css/redesign.css
@@ -1,47 +1,56 @@
-/* General resets */
-
-*,
-*::before,
-*::after {
+/* CSS reset from https://www.joshwcomeau.com/css/custom-css-reset/ */
+*, *::before, *::after {
   box-sizing: border-box;
 }
-
 
 * {
   margin: 0;
-  box-sizing: border-box;
 }
 
-:root {
-  --user-font-scale: 0.9rem - 16px;
-  font-size: clamp(
-    0.6rem,
-    0.4626rem + 1.0309vw + var(--user-font-scale),
-    0.85rem
-  );
-  --text-light: #d0d1c7;
-  --text-code-light: #575279;
-  --text-dark: #1e1e1e;
-  --text-code-dark: #E0DEF4;
-  --bg-light: #eaebe3;
-  --bg-code-light: #faf4ed;
-  --bg-dark: #1f2738;
-  --bg-code-dark: #232136;
-}
-
-:root, article .littlefoot__content {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-}
-
-html,
-body {
-  height: 100%;
-  width: 100%;
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    interpolate-size: allow-keywords;
+  }
 }
 
 body {
   line-height: 1.5;
-  background: var(--bg-light);
-  color: var(--text-dark);
-  background-attachment: fixed;
+  -webkit-font-smoothing: antialiased;
+}
+
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+p {
+  text-wrap: pretty;
+}
+h1, h2, h3, h4, h5, h6 {
+  text-wrap: balance;
+}
+
+#root, #__next {
+  isolation: isolate;
+}
+
+/* utf9k styles */
+
+/** Typography **/
+img {
+  border-radius: 5px;
+  max-width: 100%;
+}
+
+article {
+  margin: 0 auto;
+  max-width: 65rem;
 }
